gitops/clusters/oci-a1/argocd-ingress/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '20'
  name: argocd-public
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  servers:
  - hosts:
    - ./argo.rvkang.app
    port:
      name: http-argocd
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - ./argo.rvkang.app
    port:
      name: tls-argocd
      number: 443
      protocol: TLS
    tls:
      mode: PASSTHROUGH
